@@ -8,9 +8,6 @@
     </parent>
     <packaging>jar</packaging>
     <artifactId>server</artifactId>
-    <!-- <properties>
-        <java.version>21</java.version>
-    </properties> -->
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -52,7 +49,7 @@
             <artifactId>wrapperjson</artifactId>
             <version>${project.version}</version>
         </dependency>
-		<dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>wrappercsv</artifactId>
             <version>${project.version}</version>
@@ -66,7 +63,7 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>inference</artifactId>
             <version>${project.version}</version>
-        </dependency> 
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -87,8 +84,8 @@
                     <artifactId>spring-boot-starter-logging</artifactId>
                 </exclusion> 
                 <exclusion>
-                        <groupId>org.apache.logging.log4j</groupId>
-                        <artifactId>log4j-to-slf4j</artifactId>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-to-slf4j</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
@@ -110,33 +107,33 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-		<dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.9</version>
-        </dependency> 
+        </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-core_2.12</artifactId>
-            <version>3.5.0</version>
+            <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-		    <groupId>net.sf.jung</groupId>
-		    <artifactId>jung-api</artifactId>
-		    <version>2.1.1</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.sf.jung</groupId>
-		    <artifactId>jung-graph-impl</artifactId>
-		    <version>2.1.1</version>
-		</dependency>
-		<dependency>
-		    <groupId>net.sf.jung</groupId>
-		    <artifactId>jung-algorithms</artifactId>
-		    <version>2.1.1</version>
-		</dependency>
-		    </dependencies>
+            <groupId>net.sf.jung</groupId>
+            <artifactId>jung-api</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jung</groupId>
+            <artifactId>jung-graph-impl</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.jung</groupId>
+            <artifactId>jung-algorithms</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -148,6 +145,10 @@
                     <executable>true</executable>
                     <!-- This will create new .jar file with the -app suffix instead of replacing the old one. Therefore the old one can be used in other projects. -->
                     <classifier>app</classifier>
+                    <!-- These are needed in order to make apache spark work with java 21. Remove them as soon as we upgrade! -->
+                    <jvmArguments>
+                        --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                    </jvmArguments>
                 </configuration>
                 <executions>
                     <execution>
